--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.15
   freezed_annotation: ^2.2.0
   flutter_riverpod: ^2.3.2
+  go_router: ^15.2.4
 
 dev_dependencies:
   flutter_test:
