--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   flutter_riverpod: ^2.3.2
   go_router: ^15.2.4
+  freezed: ^2.3.2
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
